force-app/main/default/objects/Opportunity_Summary__c/Opportunity_Summary__c.object-meta.xml
<CustomObject>
    <description>Child object of Opportunity - obscured detail</description>
    <label>Opportunity Summary</label>
    <nameField>
        <displayFormat>OS-{0}</displayFormat>
        <label>Opportunity Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Summary</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>