force-app/main/default/objects/Opportunity_Summary__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <formula>Opportunity__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>