force-app/main/default/objects/Opportunity_Summary__c/fields/Owner_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Owner_Cost_Center__c</fullName>
    <formula>Opportunity__r.Owner.Workday_Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Cost Center</label>
    <type>Text</type>
</CustomField>