force-app/main/default/objects/Opportunity_Summary__c/fields/Owner_Workday_Details__c.field-meta.xml
<CustomField>
    <fullName>Owner_Workday_Details__c</fullName>
    <formula>HYPERLINK( Opportunity__r.Owner.Workday_User_URL__c , &quot;Click here to find me in Workday&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Workday Details</label>
    <type>Text</type>
</CustomField>