force-app/main/default/objects/Opportunity_Summary__c/fields/Talent_Client__c.field-meta.xml
<CustomField>
    <fullName>Talent_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Summary (Talent Client)</relationshipLabel>
    <relationshipName>Opportunity_Summary1</relationshipName>
    <type>Lookup</type>
</CustomField>