force-app/main/default/objects/Opportunity_Summary__c/fields/Talent_Client_Department__c.field-meta.xml
<CustomField>
    <fullName>Talent_Client_Department__c</fullName>
    <formula>TEXT(Talent_Client__r.Client_Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent Client Department</label>
    <type>Text</type>
</CustomField>