force-app/main/default/objects/Opportunity_Summary__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Summary (Third Party)</relationshipLabel>
    <relationshipName>Opportunity_Summary2</relationshipName>
    <type>Lookup</type>
</CustomField>